Fix some old references